[gd_scene load_steps=14 format=3 uid="uid://hl2hix435nib"]

[ext_resource type="Script" uid="uid://pbg0u2jhw6jp" path="res://scripts/level_2.gd" id="1_olj3f"]
[ext_resource type="Script" uid="uid://d00jrigit6kdy" path="res://scripts/game_manager.gd" id="2_quteg"]
[ext_resource type="Texture2D" uid="uid://df6vjyukseia0" path="res://art/environment/Placeholder_Platform_1.png" id="3_6bqbp"]
[ext_resource type="Texture2D" uid="uid://pdu17mojx4bm" path="res://art/environment/Placeholder_Background_4.png" id="4_uvacj"]
[ext_resource type="Texture2D" uid="uid://dylyga68q8gb8" path="res://art/environment/Placeholder_Background_3.png" id="5_7hpxs"]
[ext_resource type="Texture2D" uid="uid://y5se2ypuvdhk" path="res://art/environment/Placeholder_Background_2.png" id="6_al35t"]
[ext_resource type="Texture2D" uid="uid://bfpeo5nl6l670" path="res://art/environment/Placeholder_Background_1.png" id="7_pcp6s"]
[ext_resource type="PackedScene" uid="uid://d03mf0utraa5l" path="res://scenes/player_tater_po.tscn" id="8_allkf"]
[ext_resource type="PackedScene" uid="uid://dgsomjatjlw3e" path="res://scenes/end_of_level.tscn" id="9_ktj2q"]
[ext_resource type="PackedScene" uid="uid://qh71ikdbvkor" path="res://scenes/KillZone.tscn" id="10_es6gm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7ypv"]
size = Vector2(630.5, 205)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0s5r2"]
size = Vector2(400, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7j8ne"]
size = Vector2(423, 91)

[node name="Level2" type="Node2D"]
script = ExtResource("1_olj3f")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_quteg")

[node name="ForeGround" type="StaticBody2D" parent="."]

[node name="ForeGround" type="Sprite2D" parent="ForeGround"]
z_index = 4
position = Vector2(960, -548)
texture = ExtResource("3_6bqbp")

[node name="LeftGround" type="CollisionShape2D" parent="ForeGround"]
z_index = 4
position = Vector2(317.75, -121.5)
shape = SubResource("RectangleShape2D_n7ypv")

[node name="RightGround" type="CollisionShape2D" parent="ForeGround"]
z_index = 4
position = Vector2(1622, -115)
shape = SubResource("RectangleShape2D_n7ypv")

[node name="Platform" type="CollisionShape2D" parent="ForeGround"]
z_index = 4
position = Vector2(961, -299)
shape = SubResource("RectangleShape2D_0s5r2")
one_way_collision = true

[node name="Platform2" type="CollisionShape2D" parent="ForeGround"]
z_index = 4
position = Vector2(1341.5, -582.5)
shape = SubResource("RectangleShape2D_7j8ne")

[node name="Backgrounds" type="Node" parent="."]

[node name="BackgroundClosest" type="Parallax2D" parent="Backgrounds"]
z_index = 3
scroll_scale = Vector2(0.4, 1)
scroll_offset = Vector2(960, -548)

[node name="Sprite2D" type="Sprite2D" parent="Backgrounds/BackgroundClosest"]
texture = ExtResource("4_uvacj")

[node name="Background2" type="Parallax2D" parent="Backgrounds"]
z_index = 2
scroll_scale = Vector2(0.3, 1)
scroll_offset = Vector2(-1894, 692)

[node name="Sprite2D" type="Sprite2D" parent="Backgrounds/Background2"]
position = Vector2(2854, -1235)
texture = ExtResource("5_7hpxs")

[node name="Background3" type="Parallax2D" parent="Backgrounds"]
z_index = 1
scroll_scale = Vector2(0.2, 1)
scroll_offset = Vector2(960, -540)

[node name="Sprite2D" type="Sprite2D" parent="Backgrounds/Background3"]
texture = ExtResource("6_al35t")

[node name="BackgroundFarthest" type="Parallax2D" parent="Backgrounds"]
scroll_scale = Vector2(0, 1)
scroll_offset = Vector2(960, -548)

[node name="Sprite2D" type="Sprite2D" parent="Backgrounds/BackgroundFarthest"]
texture = ExtResource("7_pcp6s")

[node name="player_tater_po" parent="." instance=ExtResource("8_allkf")]
z_index = 5
position = Vector2(187, -350)

[node name="EndOfLevel" parent="." instance=ExtResource("9_ktj2q")]
position = Vector2(-324, -67)

[node name="Multiplayer HUD" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0

[node name="Panel" type="Panel" parent="Multiplayer HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 363.0
offset_top = -382.0
offset_right = 363.0
offset_bottom = -382.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Multiplayer HUD/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HostGame" type="Button" parent="Multiplayer HUD/Panel/VBoxContainer"]
z_index = 4
layout_mode = 2
text = "Host New Game"

[node name="JoinAsPlayer2" type="Button" parent="Multiplayer HUD/Panel/VBoxContainer"]
z_index = 5
layout_mode = 2
text = "Join As Player 2"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://b6bi0e0j6c1l5", "uid://cgm3o7qy8mlsm")
spawn_path = NodePath("../Players")
spawn_limit = 2

[node name="Players" type="Node2D" parent="."]
z_index = 5
z_as_relative = false
position = Vector2(363, -347)

[node name="KillZone" parent="." instance=ExtResource("10_es6gm")]
position = Vector2(616, 36)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" parent="KillZone" index="0"]
z_index = 6

[connection signal="pressed" from="Multiplayer HUD/Panel/VBoxContainer/HostGame" to="GameManager" method="become_host"]
[connection signal="pressed" from="Multiplayer HUD/Panel/VBoxContainer/JoinAsPlayer2" to="GameManager" method="join_as_player_2"]

[editable path="EndOfLevel"]
[editable path="KillZone"]
